added interface for managing individual files

--- a/src/components/Form.sass
+++ b/src/components/Form.sass
@@ -1,2 +1,18 @@
 form#uploader-form
   padding: 3rem
+
+  button
+    padding: 0.5rem 1rem
+    background: #0088f0
+    color: white
+    font-size: 1rem
+    border-radius: 5px
+    display: flex
+    align-items: center
+    justify-content: space-around
+    width: 120px
+
+    svg
+      width: 1.2rem
+      height: 1.2rem
+      margin-top: 1px
