--- a/src/index.sass
+++ b/src/index.sass
@@ -5,3 +5,8 @@
   padding: 0
   box-sizing: border-box
   font-family: 'Open Sans', Arial, Helvetica, sans-serif
+
+button
+  border: none
+  background: none
+  cursor: pointer
