added a form for file version

--- a/src/components/Form.sass
+++ b/src/components/Form.sass
@@ -1,5 +1,19 @@
 form#uploader-form
-  padding: 3rem
+  padding: 1rem 3rem
+
+  .input-group
+    padding: 2rem 0
+    width: 320px
+    display: flex
+    align-items: center
+    justify-content: space-between
+
+    input
+      border: 2px solid #ccc
+      border-radius: 5px
+      padding: 4px
+      height: 1.8rem
+      font-size: 1rem
 
   button
     padding: 0.5rem 1rem
